--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               }
             ],
             "styles": ["src/global.scss", "src/theme/variables.scss"],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": ["localforage"]  // Agregar esta línea
           },
           "configurations": {
             "production": {
